# X-MaC

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  contributor-candidates.md  rust-toolchain.toml
.devin/: config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  GUI_DESIGN_BRIEF.md  GUI_IMPLEMENTATION_REPORT.md  INTEGRATION_PLAN.md  OPERATIONS_MANIFEST.md  README.md  STYLE_GUIDE.md  UNIFIED_MEMORY_OPTIMIZER.md  landing.md
examples/: README.md
examples/cli/: README.md
examples/configs/: conservative.toml  default.toml  development.toml  gaming.toml
gnn/: NORTH_STAR_TRAINING.md  README.md  classification_report.txt  confusion_matrix.npy  coreml_verification.json  data_generator.py  evaluate.py  evaluation_results.json  export_coreml.py  export_memory_coreml.py  label_map.json  memory_coreml_verification.json  memory_data_generator.py  model_hashes.txt  sweep.py  train.py  train_memory_gnn.py
gnn/XMacGNN.mlpackage/: Manifest.json
gnn/XMacMemoryGNN.mlpackage/: Manifest.json
gnn/data/: class_distribution.json
gnn/memory_data/: dataset_stats.json
gnn/model/: gnn.py  memory_gnn.py  training_metrics.json
gnn/server/: README.md  inference_server.py
gui/: AppIcon.icns  SIGNING.md  build_app.sh  generate_icon.swift  install_launch_agent.sh
gui/XMacApp/: Package.swift  XMacApp.entitlements
outreach-emails/: 01-sindresorhus.txt  02-fpillet.txt  03-IrelDev.txt  04-Lcharvol.txt  05-jordanbaird.txt  06-stonerl.txt  07-gouwsxander.txt  08-jackson-storm.txt  09-mattDavo.txt  10-fujiapple852.txt  11-tuna-f1sh.txt  12-everettjf.txt  13-haukesomm.txt  14-Taiizor.txt  15-jnew00.txt
packaging/: README.md
packaging/homebrew/: xmac.rb
rules/: apps.yaml  developer.yaml  system.yaml
scripts/: bootstrap_session.sh  build.sh  check.sh  install.sh  release.sh  verify_models.sh
src/: benchmarks.rs  lib.rs  main.rs
src/cleanup/: executor_tests.rs  history.rs  mod.rs  policy.rs  preflight.rs  transaction.rs  undo.rs  verification.rs
src/cli/: args.rs  fix_script.rs  mod.rs  output.rs
src/config/: mod.rs  profiles.rs  store.rs
src/core/: context.rs  engine.rs  error.rs  mod.rs  types.rs
src/engines/: mod.rs
src/intelligence/: advisor.rs  daemon.rs  mod.rs  system_awareness.rs  zen.rs
src/mcp/: mod.rs
src/safety/: mod.rs  rule_engine.rs  rules.rs
src/twin/: app_agent.rs  database.rs  energy.rs  event_stream.rs  fs_graph.rs  hardware.rs  knowledge_graph.rs  memory.rs  mod.rs  model.rs  process.rs  reasoning.rs  software_genome.rs  what_changed.rs
src/util/: backup.rs  disk.rs  macos.rs  mod.rs  (+2 more)
tests/: daemon_integration.rs  integration_tests.rs
(+103 files in other folders)
