[package]
name = "x-mac"
version = "0.1.0"
edition = "2021"
authors = ["X-MaC Contributors"]
description = "macOS system sanitizer & discovery tool"
license = "MIT"
repository = "https://github.com/example/x-mac"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "process",
    "sync",
    "time",
    "signal",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

walkdir = "2.5"

indicatif = "0.17"

thiserror = "1.0"
anyhow = "1.0"

humantime = "2.1"
byte-unit = "4.0"

blake3 = "1.5"

uuid = { version = "1.10", features = ["v7", "serde"] }

async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=apple-m1"]
