[package]
name = "x-mac"
version = "2.1.1"
edition = "2021"
authors = ["X-MaC Contributors"]
description = "Open-source macOS cleaner, optimizer, and system monitor with on-device GNN intelligence"
license = "MIT"
repository = "https://github.com/davidnichols-ops/X-MaC"
homepage = "https://github.com/davidnichols-ops/X-MaC"
documentation = "https://github.com/davidnichols-ops/X-MaC/blob/main/docs/ARCHITECTURE.md"
readme = "README.md"
keywords = ["macos", "cleaner", "optimizer", "system", "maintenance"]
categories = ["command-line-utilities", "os::macos-apis"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "process",
    "sync",
    "time",
    "signal",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

walkdir = "2.5"

plist = "1"
regex = "1"

indicatif = "0.17"

thiserror = "1.0"
anyhow = "1.0"

humantime = "2.1"
byte-unit = "4.0"

blake3 = "1.5"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

uuid = { version = "1.10", features = ["v7", "serde"] }

async-trait = "0.1"
libc = "0.2"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
notify = "8.2.0"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
